--- a/manage-react/src/styles/counter.scss
+++ b/manage-react/src/styles/counter.scss
@@ -2,14 +2,14 @@
  * @Author: Tiny 
  * @Date: 2019-07-24 17:26:05 
  * @Last Modified by: tiny.jiao@aliyun.com
- * @Last Modified time: 2019-07-24 17:37:42
+ * @Last Modified time: 2019-07-24 21:06:49
  */
 
 .counter {
   button {
     height: 80px;
     width: 100px;
-    background: blur;
+    background: #999;
     margin-right: 10px;
     cursor: pointer;
   }
