add immutable and update ui

--- a/manage-react/src/assets/styles/counter.scss
+++ b/manage-react/src/assets/styles/counter.scss
@@ -2,15 +2,24 @@
  * @Author: Tiny 
  * @Date: 2019-07-24 17:26:05 
  * @Last Modified by: tiny.jiao@aliyun.com
- * @Last Modified time: 2019-07-24 21:06:49
+ * @Last Modified time: 2019-08-29 23:28:11
  */
 
 .counter {
   button {
-    height: 80px;
-    width: 100px;
-    background: #999;
-    margin-right: 10px;
+    width: 60px;
+    height: 60px;
     cursor: pointer;
+    background: #999;
+    text-align: center;
+  }
+  span {
+    height: 40px;
+    width: 50px;
+    font-size: 24px;
+    margin: 0 10px;
+    text-align: center;
+    font-weight: bolder;
+    display: inline-block;
   }
 }
