--- a/manage-react/src/assets/styles/login/index.scss
+++ b/manage-react/src/assets/styles/login/index.scss
@@ -6,9 +6,20 @@
   justify-content: center;
   
   .login-form {
-    background:rgba(244,246,249,1);
     width: 300px;
     height: 400px;
+    padding: 30px 20px;
     border-radius: 10px;
+    background:rgba(244,246,249,1);
+    
+    .ant-form-item {
+      margin-bottom: 40px;
+    }
+    .ant-btn {
+      width: 100%;
+      height: 50px;
+      line-height: 50px;
+      font-size: 18px;
+    }
   }
 }
